<resources>
    <string name="app_name">ZapZap</string>
    <string name="input_password">Digite sua senha</string>
    <string name="signin">Logar</string>
    <string name="signup_redirect">Não tem conta? Cadastre-se</string>
    <string name="input_email">Digite seu e-mail</string>
    <string name="input_name">Digite seu nome</string>
    <string name="signup">Cadastrar</string>
    <string name="signin_redirect">Já possui uma conta?</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Configurações</string>
    <string name="exit">Sair</string>
    <string name="settings_info">Esse não é seu nome de usuário nem sua senha. Esse nome ficará visível para seus contatos</string>
    <string name="button_camera">Botão Câmera</string>
    <string name="button_gallery">Botão Galeria</string>
    <string name="app_logo">Logo da aplicação</string>
    <string name="logo_signup">Logo tela de cadastro</string>
    <string name="title_activity_chat">ChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="image_sent">Image Sent</string>
    <string name="image_received">Image Received</string>
</resources>