<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewmodel" type="com.vcolofati.zapzap.viewmodels.AuthViewModel" />
        <variable name="ui" type="com.vcolofati.zapzap.LoginActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp"
        android:theme="@style/SigninSignupTheme"
        tools:context=".LoginActivity">

      <ImageView
          android:id="@+id/imageView"
          android:layout_width="200dp"
          android:layout_height="157dp"
          android:src="@drawable/logo"
          app:layout_constraintBottom_toTopOf="@+id/editEmail"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_chainStyle="packed"
          android:layout_marginBottom="8dp"/>

      <EditText
          android:id="@+id/editEmail"
          style="@style/WhiteLineEdit"
          android:text="@={viewmodel.email}"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:ems="10"
          android:hint="@string/input_email"
          android:inputType="textEmailAddress"
          app:layout_constraintBottom_toTopOf="@+id/editPassword"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/imageView"
          android:layout_marginBottom="8dp"/>

      <EditText
          android:id="@+id/editPassword"
          style="@style/WhiteLineEdit"
          android:text="@={viewmodel.password}"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:ems="10"
          android:hint="@string/input_password"
          android:inputType="textPassword"
          app:layout_constraintBottom_toTopOf="@+id/button"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/editEmail"
          android:layout_marginBottom="8dp"/>

      <Button
          android:id="@+id/button"
          style="@style/Widget.App.ButtonStyle"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/signin"
          android:onClick="@{viewmodel::onLoginButtonClick}"
          app:layout_constraintBottom_toTopOf="@+id/textView3"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/editPassword"
          android:layout_marginBottom="16dp"/>

      <TextView
          android:id="@+id/textView3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/signup_redirect"
          android:onClick="@{ui::redirectToSignup}"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>